# talkie

./: LICENSE  README.md  TODO.md  lint-tests.py  lint.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/: publishing.md
talkie/: __init__.py  __main__.py  __version__.py
talkie/cli/: __init__.py  curl_parser.py  execute.py  http_alias.py  main.py  output.py  parallel_parse.py
talkie/core/: __init__.py  async_client.py  client.py  request_builder.py  response_formatter.py  websocket_client.py
talkie/utils/: __init__.py  benchmarks.py  cache.py  colors.py  config.py  curl_generator.py  error_handler.py  formatter.py  graphql.py  history.py  logger.py  memory_manager.py  openapi.py  openapi_generator.py  performance_config.py  validators.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_client.py  test_client_certificates.py  test_config.py  test_error_handler.py  test_formatter.py  test_graphql_cli.py  test_integration.py  test_logger.py  test_memory_manager.py  test_openapi.py  test_parallel_parse.py  test_performance_config.py  test_readme_cli.py  test_request_builder.py  test_websocket_cli.py
tests/core/: test_async_client.py  test_websocket_client.py
tests/utils/: test_graphql.py  test_history.py  test_validators.py
